// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductTile /> renders ProductTile 1`] = `
<div
  className="mfui-product-tile"
>
  <div
    className="mfui-product-tile__content"
  >
    <h2
      className="mfui-product-tile__title"
    >
      <TextLink
        className="mfui-product-tile__title-link"
        color="black"
        href="/tariffs/all/vybiray.html"
        onClick={[Function]}
        target="_blank"
        underlineStyle="none"
        underlineVisibility="hover"
      >
        Включайся! Выбирай
      </TextLink>
    </h2>
    <div
      className="mfui-product-tile__link-wrapper"
    >
      <TextLink
        className="mfui-product-tile__detail-link"
        color="blue"
        href="/tariffs/all/vybiray.html"
        onClick={[Function]}
        target="_blank"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подробнее
      </TextLink>
    </div>
    <ProductTileCashback
      title="Кэшбэк"
      unit="%"
      value={20}
    />
    <ProductTilePrice
      discount="100"
      title="При покупке новой SIM–карты"
      unitExtra="за 30 дней"
      unitValue="₽"
      value="3000"
    />
    <div
      className="mfui-product-tile__constructor"
    >
      <ProductTileStatic
        packs={
          Array [
            Object {
              "isDelim": false,
              "title": "Звонки на все номера России",
              "unit": "ГБ",
              "value": 10,
            },
            Object {
              "isDelim": true,
              "title": "Безлимитный интернет",
              "unit": "",
              "value": 0,
            },
          ]
        }
      />
      <ProductTileOptions
        options={
          Array [
            Object {
              "caption": "Пакеты кино и сериалов",
              "svgIcon": <test-file-stub />,
              "title": "МегаФон ТВ",
            },
          ]
        }
      />
    </div>
    <ProductTileOptions
      className="mfui-product-tile__second-params"
      onClickBubble={[Function]}
      options={
        Array [
          Object {
            "footnote": "Участвуйте в программе",
            "svgIcon": <test-file-stub />,
            "title": "Кэшбэк 20%",
            "unit": "",
            "value": "",
          },
          Object {
            "footnote": "",
            "svgIcon": <test-file-stub />,
            "title": "Безлимитные SMS",
            "unit": "₽ за 30 дней",
            "value": "100",
          },
        ]
      }
    />
  </div>
  <ProductTileBuy
    buyButton={
      Object {
        "buttonPassiveColor": "green",
        "buyButtonText": "Купить",
        "buyLink": "/zakaz/?tariff=choose",
        "showBuyButton": true,
      }
    }
    connectButton={
      Object {
        "connectButtonText": "Перейти на тариф",
        "connectLink": "/tariffs/all/vybiray.html",
        "showConnectButton": true,
      }
    }
    onClickBuy={[Function]}
    onClickConnect={[Function]}
  />
</div>
`;

exports[`<ProductTile /> renders ProductTile 2`] = `
<div
  className="mfui-product-tile mfui-product-tile_constructor"
>
  <div
    className="mfui-product-tile__content"
  >
    <h2
      className="mfui-product-tile__title"
    >
      <TextLink
        className="mfui-product-tile__title-link"
        color="black"
        href="/tariffs/all/vybiray.html"
        onClick={[Function]}
        target="_blank"
        underlineStyle="none"
        underlineVisibility="hover"
      >
        Включайся! Выбирай
      </TextLink>
    </h2>
    <div
      className="mfui-product-tile__link-wrapper"
    >
      <TextLink
        className="mfui-product-tile__detail-link"
        color="blue"
        href="/tariffs/all/vybiray.html#choose_11"
        onClick={[Function]}
        target="_blank"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подробнее
      </TextLink>
    </div>
    <ProductTileCashback
      title="Кэшбэк"
      unit="%"
      value={20}
    />
    <ProductTilePrice
      discount="100"
      title="При покупке новой SIM–карты"
      unitExtra="за 30 дней"
      unitValue="₽"
      value="450"
    />
    <div
      className="mfui-product-tile__constructor"
    >
      <ProductTileDynamic
        currentPack={
          Object {
            "buyLink": "/zakaz/?tariff=choose_11",
            "calls": Object {
              "unit": "минут",
              "value": 300,
            },
            "options": Array [
              Object {
                "footnote": "Участвуйте в программе",
                "svgIcon": <test-file-stub />,
                "title": "Кэшбэк 20%",
                "unit": "",
                "value": "",
              },
              Object {
                "footnote": "Подключите в разделе «Услуги и опции»",
                "svgIcon": <test-file-stub />,
                "title": "Безлимитные SMS",
                "unit": "₽ за 30 дней",
                "value": "55",
              },
            ],
            "payment": Object {
              "discount": "",
              "value": "450",
            },
            "shopTag": "choose_11",
            "traffic": Object {
              "unit": "ГБ",
              "value": 6,
            },
          }
        }
        onChangeCalls={[Function]}
        onChangeTraffic={[Function]}
        startCallsIndex={0}
        startTrafficIndex={0}
        switcher={
          Object {
            "calls": Array [
              "300",
            ],
            "traffic": Array [
              "6",
            ],
          }
        }
      />
      <ProductTileOptions
        options={
          Array [
            Object {
              "caption": "Пакеты кино и сериалов",
              "svgIcon": <test-file-stub />,
              "title": "МегаФон ТВ",
            },
          ]
        }
      />
    </div>
    <ProductTileOptions
      className="mfui-product-tile__second-params"
      onClickBubble={[Function]}
      options={
        Array [
          Object {
            "footnote": "Участвуйте в программе",
            "svgIcon": <test-file-stub />,
            "title": "Кэшбэк 20%",
            "unit": "",
            "value": "",
          },
          Object {
            "footnote": "Подключите в разделе «Услуги и опции»",
            "svgIcon": <test-file-stub />,
            "title": "Безлимитные SMS",
            "unit": "₽ за 30 дней",
            "value": "55",
          },
        ]
      }
    />
  </div>
  <ProductTileBuy
    buyButton={
      Object {
        "buttonPassiveColor": "green",
        "buyButtonText": "Купить",
        "buyLink": "/zakaz/?tariff=choose_11",
        "showBuyButton": true,
      }
    }
    connectButton={
      Object {
        "connectButtonText": "Перейти на тариф",
        "connectLink": "/tariffs/all/vybiray.html",
        "showConnectButton": true,
      }
    }
    onClickBuy={[Function]}
    onClickConnect={[Function]}
  />
</div>
`;

exports[`<ProductTile /> renders ProductTile with topBadgeTitle 1`] = `
<div
  className="mfui-product-tile mfui-product-tile_constructor"
>
  <ProductTileHint
    title="Тариф-конструктор от 450 ₽"
  />
  <div
    className="mfui-product-tile__content"
  >
    <h2
      className="mfui-product-tile__title"
    >
      <TextLink
        className="mfui-product-tile__title-link"
        color="black"
        href="/tariffs/all/vybiray.html"
        onClick={[Function]}
        target="_blank"
        underlineStyle="none"
        underlineVisibility="hover"
      >
        Включайся! Выбирай
      </TextLink>
    </h2>
    <div
      className="mfui-product-tile__link-wrapper"
    >
      <TextLink
        className="mfui-product-tile__detail-link"
        color="blue"
        href="/tariffs/all/vybiray.html#choose_11"
        onClick={[Function]}
        target="_blank"
        underlineStyle="solid"
        underlineVisibility="hover"
      >
        Подробнее
      </TextLink>
    </div>
    <ProductTileCashback
      title="Кэшбэк"
      unit="%"
      value={20}
    />
    <ProductTilePrice
      discount="100"
      title="При покупке новой SIM–карты"
      unitExtra="за 30 дней"
      unitValue="₽"
      value="450"
    />
    <div
      className="mfui-product-tile__constructor"
    >
      <ProductTileDynamic
        currentPack={
          Object {
            "buyLink": "/zakaz/?tariff=choose_11",
            "calls": Object {
              "unit": "минут",
              "value": 300,
            },
            "options": Array [
              Object {
                "footnote": "Участвуйте в программе",
                "svgIcon": <test-file-stub />,
                "title": "Кэшбэк 20%",
                "unit": "",
                "value": "",
              },
              Object {
                "footnote": "Подключите в разделе «Услуги и опции»",
                "svgIcon": <test-file-stub />,
                "title": "Безлимитные SMS",
                "unit": "₽ за 30 дней",
                "value": "55",
              },
            ],
            "payment": Object {
              "discount": "",
              "value": "450",
            },
            "shopTag": "choose_11",
            "traffic": Object {
              "unit": "ГБ",
              "value": 6,
            },
          }
        }
        onChangeCalls={[Function]}
        onChangeTraffic={[Function]}
        startCallsIndex={0}
        startTrafficIndex={0}
        switcher={
          Object {
            "calls": Array [
              "300",
            ],
            "traffic": Array [
              "6",
            ],
          }
        }
      />
      <ProductTileOptions
        options={
          Array [
            Object {
              "caption": "Пакеты кино и сериалов",
              "svgIcon": <test-file-stub />,
              "title": "МегаФон ТВ",
            },
          ]
        }
      />
    </div>
    <ProductTileOptions
      className="mfui-product-tile__second-params"
      onClickBubble={[Function]}
      options={
        Array [
          Object {
            "footnote": "Участвуйте в программе",
            "svgIcon": <test-file-stub />,
            "title": "Кэшбэк 20%",
            "unit": "",
            "value": "",
          },
          Object {
            "footnote": "Подключите в разделе «Услуги и опции»",
            "svgIcon": <test-file-stub />,
            "title": "Безлимитные SMS",
            "unit": "₽ за 30 дней",
            "value": "55",
          },
        ]
      }
    />
  </div>
  <ProductTileBuy
    buyButton={
      Object {
        "buttonPassiveColor": "green",
        "buyButtonText": "Купить",
        "buyLink": "/zakaz/?tariff=choose_11",
        "showBuyButton": true,
      }
    }
    connectButton={
      Object {
        "connectButtonText": "Перейти на тариф",
        "connectLink": "/tariffs/all/vybiray.html",
        "showConnectButton": true,
      }
    }
    onClickBuy={[Function]}
    onClickConnect={[Function]}
  />
</div>
`;
